Fix overflow issue for the reservation table

--- a/src/components/styles/DeleteRoom.css
+++ b/src/components/styles/DeleteRoom.css
@@ -25,3 +25,8 @@
     width: 100% !important;
   }
 }
+
+#delete-room-table {
+  overflow:scroll;
+  height: 70%;
+}
